Add Engine as param and default to Neural